--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera página con GitHub Pages</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Susus Reborn</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>¡Hola, mundo!</h1>
-    <p>Esta es mi primera página publicada con GitHub Pages.</p>
+    <header>
+        <h1>Susus Reborn</h1>
+        <nav>
+            <ul>
+                <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
+                <li><a href="#catalogo">Catálogo</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="quienes-somos">
+        <h2>¿Quiénes somos?</h2>
+        <p>Hola bienvenidos a Susu´s Reborn. ¿Os estáis preguntando que es Susu´s Reborn? Para ello comenzaré contándoos quien soy yo, así que nuevamente hola, mi nombre es Susana, estudié magisterio y me dediqué a la enseñanza durante años. Un día gracias a mi madre,  que ama las muñecas, descubrí el mundo Reborn en una feria. Fue ahí donde me enamoré de este arte, cuando vi esas increíbles esculturas, pintadas tan reales que sólo les faltaba respirar. En mi cabeza, comenzó a resonar la idea de crear uno con mis propias manos, esto no fue tarea fácil, pero fue sin duda la mejor decisión de mi vida. Lo que al principio fue un hobby, paso a ser una parte importante en mi día a día, y antes de que me diera cuenta, comencé a soñar con la idea de dedicarme profesionalmente a la creación de estos bebés. Así surgió Susu´s Reborn, empresa en la que nos dedicamos a crear estas obras de arte, las cuales se realizan totalmente a mano. En este proceso de creación dedicamos muchas horas, cariño y esfuerzo en cada uno de nuestros bebés. Gracias a este proceso artesanal, cabe la posibilidad de personalizar a vuestro gusto o de encontrar juntos similitudes que os complazcan para adoptar a vuestro bebe. La atención que recibiréis en Susu´s Reborn, siempre será individualizada, dándoos una experiencia única e irrepetible, haciéndoos participes del proceso y la magia que envuelve a Susu´s. A continuación encontraréis un catálogo completo y la forma de contactar con nosotras, para que podamos emprender juntos vuestro proceso de adopción de nuestros bebes Reborn. ¿Quieres vivir junto a nosotras esta experiencia única?</p>
+    </section>
+
+    <section id="catalogo">
+        <h2>Catálogo</h2>
+        <h3>Silicona; modelos exclusivos</h3>
+        <p>(Aquí irán las imágenes y descripciones que me mandes)</p>
+
+        <h3>Vinilo con cuerpo de tela</h3>
+        <p>(Aquí irán las imágenes y descripciones que me mandes)</p>
+
+        <h3>Kits SIN PINTAR para artistas</h3>
+        <p>(Aquí irán las imágenes y descripciones que me mandes)</p>
+
+        <h3>Pinta tu propio reborn en nuestros CURSOS presenciales</h3>
+        <p>(Aquí irán las imágenes y descripciones que me mandes)</p>
+    </section>
+
+    <footer>
+        <p>Sigue a Susu's Reborn en:
+            <a href="https://facebook.com" target="_blank">Facebook</a> |
+            <a href="https://instagram.com" target="_blank">Instagram</a> |
+            <a href="https://tiktok.com" target="_blank">TikTok</a>
+        </p>
+    </footer>
+
+    <a href="https://wa.me/34653925967" class="whatsapp-float" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+    </a>
 </body>
 </html>
