--- a/index.html
+++ b/index.html
@@ -25,7 +25,27 @@
     <section id="catalogo">
         <h2>Catálogo</h2>
         <h3>Silicona; modelos exclusivos</h3>
-        <p>(Aquí irán las imágenes y descripciones que me mandes)</p>
+        <div class="producto">
+    <h3 class="titulo-grande">Ofelia</h3>
+    <div class="imagenes-producto">
+      <img src="imagenes/ofelia1.jpg">
+      <img src="imagenes/ofelia2.jpg">
+      <img src="imagenes/ofelia3.jpg">
+      <img src="imagenes/ofelia4.jpg">
+      <img src="imagenes/ofelia5.jpg">
+      <img src="imagenes/ofelia6.jpg">
+      <img src="imagenes/ofelia7.jpg">
+      <img src="imagenes/ofelia8.jpg">
+      <img src="imagenes/ofelia9.jpg">
+      <img src="imagenes/ofelia10.jpg">
+      <img src="imagenes/ofelia11.jpg">
+    </div>
+    <p class="descripcion">Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real, tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años.                                                                                                         Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real, biberon... la lengua se puede colocar en distintas posiciones para cambiar su gesto y aportar realismo, sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo injertado, para más realismo, pintado o calvita.  Se puede bañar. Mide 50 cm y pesa 3´500kg se puede hacer en niño o en niña.                                                                   
+    </p>
+    <p><strong>Incluye:</strong> chupete, chupetero, pañal, peluche, ropa de repuesto, pijama, body, calcetines, accesorios para el pelo, manta, certificado de nacimiento, hoja de cuidados, certificado de autenticidad y alguna sorpresa.</p>
+    <p><em>Para más información contacte por WhatsApp.</em></p>
+  </div>
+       
 
         <h3>Vinilo con cuerpo de tela</h3>
         <p>(Aquí irán las imágenes y descripciones que me mandes)</p>
