--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         <div class="producto">
     <h3 class="titulo-grande">Ofelia</h3>
     <div class="imagenes-producto">
-      <img src="imagenes/ofelia1.jpg">
-      <img src="imagenes/ofelia2.jpg">
-      <img src="imagenes/ofelia3.jpg">
-      <img src="imagenes/ofelia4.jpg">
-      <img src="imagenes/ofelia5.jpg">
-      <img src="imagenes/ofelia6.jpg">
-      <img src="imagenes/ofelia7.jpg">
-      <img src="imagenes/ofelia8.jpg">
-      <img src="imagenes/ofelia9.jpg">
-      <img src="imagenes/ofelia10.jpg">
-      <img src="imagenes/ofelia11.jpg">
+      <img src="imagenes/ofelia1.jpg"alt="Ofelia 1">
+      <img src="imagenes/ofelia2.jpg"alt="Ofelia 2">
+      <img src="imagenes/ofelia3.jpg"alt="Ofelia 3">
+      <img src="imagenes/ofelia4.jpg"alt="Ofelia 4">
+      <img src="imagenes/ofelia5.jpg"alt="Ofelia 5">
+      <img src="imagenes/ofelia6.jpg"alt="Ofelia 6">
+      <img src="imagenes/ofelia7.jpg"alt="Ofelia 7">
+      <img src="imagenes/ofelia8.jpg"alt="Ofelia 8">
+      <img src="imagenes/ofelia9.jpg"alt="Ofelia 9">
+      <img src="imagenes/ofelia10.jpg"alt="Ofelia 10">
+      <img src="imagenes/ofelia11.jpg"alt="Ofelia 11">
     </div>
     <div>
     <p class="descripcion">Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real, tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años.Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real, biberon... la lengua se puede colocar en distintas posiciones para cambiar su gesto y aportar realismo, sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo injertado, para más realismo, pintado o calvita.  Se puede bañar. Mide 50 cm y pesa 3´500kg se puede hacer en niño o en niña.                                                                   
