--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Susus Reborn</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -30,9 +31,10 @@
                 <img src="imagenes/ofelia1.jpg" alt="Ofelia 1">
                 <img src="imagenes/ofelia2.jpg" alt="Ofelia 2">
                 <img src="imagenes/ofelia3.jpg" alt="Ofelia 3">
+                <img src="imagenes/ofelia4.jpg" alt="Ofelia 4">
             </div>
             <p class="descripcion">
-                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real, tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real, biberon... la lengua se puede colocar en distintas posiciones para cambiar su gesto y aportar realismo, sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo injertado, para más realismo, pintado o calvita. Se puede bañar. Mide 50 cm y pesa 3´500kg se puede hacer en niño o en niña. Se entrega con una chupete, chupetero, pañal, peluche, ropa de repuesto, pijama, body, calcetines, cositas para el pelo, manta, certificado de nacimiento, hoja de cuidados, certificado de autenticidad y alguna sorpresa. Para más información contacte por Whatsapp.
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real, tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años...
             </p>
         </div>
     </section>
