--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Susus Reborn</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -20,7 +19,19 @@
 
     <section id="quienes-somos">
         <h2>¿Quiénes somos?</h2>
-        <p>Hola bienvenidos a Susu´s Reborn. ¿Os estáis preguntando que es Susu´s Reborn?... (texto completo)</p>
+        <p>
+            Hola bienvenidos a Susu´s Reborn. ¿Os estáis preguntando que es Susu´s Reborn?
+            Para ello comenzaré contándoos quien soy yo, así que nuevamente hola, mi nombre es Susana, estudié magisterio y me dediqué a la enseñanza durante años.
+            Un día gracias a mi madre, que ama las muñecas, descubrí el mundo Reborn en una feria. Fue ahí donde me enamoré de este arte, cuando vi esas increíbles esculturas,
+            pintadas tan reales que sólo les faltaba respirar. En mi cabeza, comenzó a resonar la idea de crear uno con mis propias manos, esto no fue tarea fácil,
+            pero fue sin duda la mejor decisión de mi vida. Lo que al principio fue un hobby, paso a ser una parte importante en mi día a día, y antes de que me diera cuenta,
+            comencé a soñar con la idea de dedicarme profesionalmente a la creación de estos bebés.
+            Así surgió Susu´s Reborn, empresa en la que nos dedicamos a crear estas obras de arte, las cuales se realizan totalmente a mano. En este proceso de creación dedicamos muchas horas,
+            cariño y esfuerzo en cada uno de nuestros bebés. Gracias a este proceso artesanal, cabe la posibilidad de personalizar a vuestro gusto o de encontrar juntos similitudes que os complazcan para adoptar a vuestro bebe.
+            La atención que recibiréis en Susu´s Reborn, siempre será individualizada, dándoos una experiencia única e irrepetible, haciéndoos participes del proceso y la magia que envuelve a Susu´s.
+            A continuación encontraréis un catálogo completo y la forma de contactar con nosotras, para que podamos emprender juntos vuestro proceso de adopción de nuestros bebes Reborn. 
+            ¿Quieres vivir junto a nosotras esta experiencia única?
+        </p>
     </section>
 
     <section id="silicona">
@@ -34,7 +45,13 @@
                 <img src="imagenes/ofelia4.jpg" alt="Ofelia 4">
             </div>
             <p class="descripcion">
-                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real, tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años...
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,
+                tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real,
+                biberón... la lengua se puede colocar en distintas posiciones para cambiar su gesto y aportar realismo, sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo injertado,
+                para más realismo, pintado o calvita. Se puede bañar. Mide 50 cm y pesa 3´500kg, se puede hacer en niño o en niña. 
+                Se entrega con un chupete, chupetero, pañal, peluche, ropa de repuesto, pijama, body, calcetines, cositas para el pelo, manta, certificado de nacimiento,
+                hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Para más información contacte por Whatsapp.
             </p>
         </div>
     </section>
