--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
                 <img src="imagenes/ofelia2.jpg" alt="Ofelia 2">
                 <img src="imagenes/ofelia3.jpg" alt="Ofelia 3">
                 <img src="imagenes/ofelia4.jpg" alt="Ofelia 4">
+                <img src="imagenes/ofelia4.jpg" alt="Ofelia 5">
+                <img src="imagenes/ofelia4.jpg" alt="Ofelia 6">
+                <img src="imagenes/ofelia4.jpg" alt="Ofelia 7">
+                <img src="imagenes/ofelia4.jpg" alt="Ofelia 8">
+                <img src="imagenes/ofelia4.jpg" alt="Ofelia 9">
+                <img src="imagenes/ofelia4.jpg" alt="Ofelia 10">
+                <img src="imagenes/ofelia4.jpg" alt="Ofelia 11">
             </div>
             <p class="descripcion">
                 Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,
