--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
     <footer>
         <p>Sigue a Susu's Reborn en:
-            <a href="https://facebook.com" target="_blank">Facebook</a> |
-            <a href="https://instagram.com" target="_blank">Instagram</a> |
-            <a href="https://tiktok.com" target="_blank">TikTok</a>
+            <a href="https://facebook.com/Susu´s Reborn" target="_blank">Facebook</a> |
+            <a href="https://instagram.com/susus_reborn" target="_blank">Instagram</a> |
+            <a href="https://tiktok.com/@sususreborn" target="_blank">TikTok</a>
         </p>
     </footer>
 
