--- a/index.html
+++ b/index.html
@@ -52,12 +52,223 @@
                 <img src="imagenes/ofelia11.jpg" alt="Ofelia 11">
             </div>
             <p class="descripcion">
-                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,
-                tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real,
-                biberón... la lengua se puede colocar en distintas posiciones para cambiar su gesto y aportar realismo, sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo injertado,
-                para más realismo, pintado o calvita. Se puede bañar. Mide 50 cm y pesa 3´500kg, se puede hacer en niño o en niña. 
-                Se entrega con un chupete, chupetero, pañal, peluche, ropa de repuesto, pijama, body, calcetines, cositas para el pelo, manta, certificado de nacimiento,
-                hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real,
+                biberón... la lengua se puede colocar en distintas posiciones para cambiar su gesto y aportar realismo, sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo injertado,para más realismo, pintado o calvita. Se puede bañar. Mide 50 cm y pesa 3´500kg, se puede hacer en niño o en niña. 
+                Se entrega con un chupete, chupetero, pañal, peluche, ropa de repuesto, pijama, body, calcetines, cositas para el pelo, manta, certificado de nacimiento,hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Para más información contacte por Whatsapp.
+            </p>
+        </div>
+         <div class="producto">
+            <h4 class="titulo-grande">Martina</h4>
+            <div class="galeria">
+                <img src="imagenes/martina1.jpg" alt="Martina 1">
+                <img src="imagenes/martina2.jpg" alt="Martina 2">
+                <img src="imagenes/martina3.jpg" alt="Martina 3">
+                <img src="imagenes/martina4.jpg" alt="Martina 4">
+                <img src="imagenes/martina5.jpg" alt="Martina 5">
+                <img src="imagenes/martina6.jpg" alt="Martina 6">
+                <img src="imagenes/martina7.jpg" alt="Martina 7">
+                <img src="imagenes/martina8.jpg" alt="Martina 8">
+                <img src="imagenes/martina9.jpg" alt="Martina 9">
+                <img src="imagenes/martina10.jpg" alt="Martina 10">
+                <img src="imagenes/martina11.jpg" alt="Martina 11">
+            </div>
+            <p class="descripcion">
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real,
+                biberón... la lengua se puede colocar en distintas posiciones para cambiar su gesto y aportar realismo, sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo injertado,para más realismo, pintado o calvita. Se puede bañar. Mide 52 cm y pesa 3´500kg, se puede hacer en niño o en niña. 
+                Se entrega con un chupete, chupetero, pañal, peluche, ropa de repuesto, pijama, body, calcetines, cositas para el pelo, manta, certificado de nacimiento,hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Para más información contacte por Whatsapp.
+            </p>
+        </div>
+        <div class="producto">
+            <h5 class="titulo-grande">Ohana</h5>
+            <div class="galeria">
+                <img src="imagenes/ohana1.jpg" alt="Ohana 1">
+                <img src="imagenes/ohana2.jpg" alt="Ohana 2">
+                <img src="imagenes/ohana3.jpg" alt="Ohana 3">
+                <img src="imagenes/ohana4.jpg" alt="Ohana 4">
+                <img src="imagenes/ohana5.jpg" alt="Ohana 5">
+                <img src="imagenes/ohana6.jpg" alt="Ohana 6">
+                <img src="imagenes/ohana7.jpg" alt="Ohana 7">
+                <img src="imagenes/ohana8.jpg" alt="Ohana 8">
+                <img src="imagenes/ohana9.jpg" alt="Ohana 9">
+                <img src="imagenes/ohana10.jpg" alt="Ohana 10">
+                <img src="imagenes/ohana11.jpg" alt="Ohana 11">
+            </div>
+            <p class="descripcion">
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real,
+                biberón... la lengua se puede colocar en distintas posiciones para cambiar su gesto y aportar realismo, sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo injertado,para más realismo, pintado o calvita. Se puede bañar. Mide 45 cm y pesa 2´400kg, se puede hacer en niño o en niña. 
+                Se entrega con un chupete, chupetero, pañal, peluche, ropa de repuesto, pijama, body, calcetines, cositas para el pelo, manta, certificado de nacimiento,hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Para más información contacte por Whatsapp.
+            </p>
+        </div>
+         <div class="producto">
+            <h6 class="titulo-grande">Daniel</h6>
+            <div class="galeria">
+                <img src="imagenes/daniel1.jpg" alt="Daniel 1">
+                <img src="imagenes/daniel2.jpg" alt="Daniel 2">
+                <img src="imagenes/daniel3.jpg" alt="Daniel 3">
+                <img src="imagenes/daniel4.jpg" alt="Daniel 4">
+                <img src="imagenes/daniel5.jpg" alt="Daniel 5">
+                <img src="imagenes/daniel6.jpg" alt="Daniel 6">
+                <img src="imagenes/daniel7.jpg" alt="Daniel 7">
+                <img src="imagenes/daniel8.jpg" alt="Daniel 8">
+                <img src="imagenes/daniel9.jpg" alt="Daniel 9">
+                <img src="imagenes/daniel10.jpg" alt="Daniel 10">
+                <img src="imagenes/daniel11.jpg" alt="Daniel 11">
+            </div>
+            <p class="descripcion">
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real,
+                biberón... la lengua se puede colocar en distintas posiciones para cambiar su gesto y aportar realismo, sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo injertado,para más realismo, pintado o calvita. Se puede bañar. Mide 45 cm y pesa 2´400kg, se puede hacer en niño o en niña. 
+                Se entrega con un chupete, chupetero, pañal, peluche, ropa de repuesto, pijama, body, calcetines, cositas para el pelo, manta, certificado de nacimiento,hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Para más información contacte por Whatsapp.
+            </p>
+        </div>
+         <div class="producto">
+            <h7 class="titulo-grande">Silvia</h7>
+            <div class="galeria">
+                <img src="imagenes/silvia1.jpg" alt="Silvia 1">
+                <img src="imagenes/silvia2.jpg" alt="Silvia 2">
+                <img src="imagenes/silvia3.jpg" alt="Silvia 3">
+                <img src="imagenes/silvia4.jpg" alt="Silvia 4">
+                <img src="imagenes/silvia5.jpg" alt="Silvia 5">
+                <img src="imagenes/silvia6.jpg" alt="Silvia 6">
+                <img src="imagenes/silvia7.jpg" alt="Silvia 7">
+                <img src="imagenes/silvia8.jpg" alt="Silvia 8">
+                <img src="imagenes/silvia9.jpg" alt="Silvia 9">
+                <img src="imagenes/silvia10.jpg" alt="Silvia 10">
+                <img src="imagenes/silvia11.jpg" alt="Silvia 11">
+            </div>
+            <p class="descripcion">
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real,
+                biberón... la lengua se puede colocar en distintas posiciones para cambiar su gesto y aportar realismo, sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo injertado,para más realismo, pintado o calvita. Se puede bañar. Mide 45 cm y pesa 2´400kg, se puede hacer en niño o en niña. 
+                Se entrega con un chupete, chupetero, pañal, peluche, ropa de repuesto, pijama, body, calcetines, cositas para el pelo, manta, certificado de nacimiento,hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Para más información contacte por Whatsapp.
+            </p>
+        </div>
+         <div class="producto">
+            <h8 class="titulo-grande">Nana</h8>
+            <div class="galeria">
+                <img src="imagenes/nana1.jpg" alt="Nana 1">
+                <img src="imagenes/nana2.jpg" alt="Nana 2">
+                <img src="imagenes/nana3.jpg" alt="Nana 3">
+                <img src="imagenes/nana4.jpg" alt="Nana 4">
+                <img src="imagenes/nana5.jpg" alt="Nana 5">
+                <img src="imagenes/nana6.jpg" alt="Nana 6">
+                <img src="imagenes/nana7.jpg" alt="Nana 7">
+                <img src="imagenes/nana8.jpg" alt="Nana 8">
+                <img src="imagenes/nana9.jpg" alt="Nana 9">
+                <img src="imagenes/nana10.jpg" alt="Nana 10">
+                <img src="imagenes/nana11.jpg" alt="Nana 11">
+            </div>
+            <p class="descripcion">
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real,
+                biberón... la lengua se puede colocar en distintas posiciones para cambiar su gesto y aportar realismo, sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo injertado,para más realismo, pintado o calvita. Se puede bañar. Mide 39 cm y pesa 1´400kg, se puede hacer en niño o en niña, ojos abiertos o cerrados. 
+                Se entrega con un chupete, chupetero, pañal, peluche, ropa de repuesto, pijama, calcetines, cositas para el pelo, manta, certificado de nacimiento,hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Para más información contacte por Whatsapp.
+            </p>
+        </div>
+         <div class="producto">
+            <h9 class="titulo-grande">Noemi</h9>
+            <div class="galeria">
+                <img src="imagenes/noemi1.jpg" alt="Noemi 1">
+                <img src="imagenes/noemi2.jpg" alt="Noemi 2">
+                <img src="imagenes/noemi3.jpg" alt="Noemi 3">
+                <img src="imagenes/noemi4.jpg" alt="Noemi 4">
+                <img src="imagenes/noemi5.jpg" alt="Noemi 5">
+                <img src="imagenes/noemi6.jpg" alt="Noemi 6">
+                <img src="imagenes/noemi7.jpg" alt="Noemi 7">
+                <img src="imagenes/noemi8.jpg" alt="Noemi 8">
+                <img src="imagenes/noemi9.jpg" alt="Noemi 9">
+                <img src="imagenes/noemi10.jpg" alt="Noemi 10">
+                <img src="imagenes/noemi11.jpg" alt="Noemi 11">
+            </div>
+            <p class="descripcion">
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar un mini chupete,biberón...Sus cejas son pintadas y las pestañas injertadas, puede llevar el pelo pintado o calvita. Se puede bañar. Mide 15 cm y pesa 0´400kg, se puede hacer en niño o en niña. 
+                Se entrega con un chupete, peluche, ropa de repuesto, cunita, certificado de nacimiento,hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Para más información contacte por Whatsapp.
+            </p>
+        </div>
+         <div class="producto">
+            <h10 class="titulo-grande">Oreo</h10>
+            <div class="galeria">
+                <img src="imagenes/oreo1.jpg" alt="Oreo 1">
+                <img src="imagenes/oreo2.jpg" alt="Oreo 2">
+                <img src="imagenes/oreo3.jpg" alt="Oreo 3">
+                <img src="imagenes/oreo4.jpg" alt="Oreo 4">
+                <img src="imagenes/oreo5.jpg" alt="Oreo 5">
+                <img src="imagenes/oreo6.jpg" alt="Oreo 6">
+                <img src="imagenes/oreo7.jpg" alt="Oreo 7">
+                <img src="imagenes/oreo8.jpg" alt="Oreo 8">
+                <img src="imagenes/oreo9.jpg" alt="Oreo 9">
+                <img src="imagenes/oreo10.jpg" alt="Oreo 10">
+                <img src="imagenes/oreo11.jpg" alt="Oreo 11">
+            </div>
+            <p class="descripcion">
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea arruguitas que la hacen parecer piel real,tiene una durabilidad excelente y si la cuidas la tendrás por muchísimos años. Es un perrito lleno de detalles, tiene su boquita abierta para aceptar chupete real,biberón... puede llevar el pelo injertado en solo cabeza, en cuerpo completo o sin pelo. Se puede bañar. Mide 25 cm y pesa 0´500kg, no tiene sexo. 
+                Se entrega con un chupete, collar, mantita, trajecito, certificado de nacimiento,hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Para más información contacte por Whatsapp.
+            </p>
+        </div>
+         <div class="producto">
+            <h11 class="titulo-grande">Orejotas </h11>
+            <div class="galeria">
+                <img src="imagenes/orejotas1.jpg" alt="Orejotas 1">
+                <img src="imagenes/orejotas2.jpg" alt="Orejotas 2">
+                <img src="imagenes/orejotas3.jpg" alt="Orejotas 3">
+                <img src="imagenes/orejotas4.jpg" alt="Orejotas 4">
+                <img src="imagenes/orejotas5.jpg" alt="Orejotas 5">
+                <img src="imagenes/orejotas6.jpg" alt="Orejotas 6">
+                <img src="imagenes/orejotas7.jpg" alt="Orejotas 7">
+                <img src="imagenes/orejotas8.jpg" alt="Orejotas 8">
+                <img src="imagenes/orejotas9.jpg" alt="Orejotas 9">
+                <img src="imagenes/orejotas10.jpg" alt="Orejotas 10">
+                <img src="imagenes/orejotas11.jpg" alt="Orejotas 11">
+            </div>
+            <p class="descripcion">
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea arruguitas que la hacen parecer piel real, tiene una durabilidad excelente y si la cuidas la tendrás por muchísimos años. Es un conejito lleno de detalles, tiene su boquita abierta para aceptar chupete real,biberón... Se puede bañar. Mide 33 cm y pesa 0´600kg, no tiene sexo. 
+                Se entrega con un chupete, ropa de repuesto, manta, certificado de nacimiento, hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Para más información contacte por Whatsapp.
+            </p>
+        </div>
+         <div class="producto">
+            <h12 class="titulo-grande">Hamtaro</h12>
+            <div class="galeria">
+                <img src="imagenes/hamtaro1.jpg" alt="Hamtaro 1">
+                <img src="imagenes/hamtaro2.jpg" alt="Hamtaro 2">
+                <img src="imagenes/hamtaro3.jpg" alt="Hamtaro 3">
+                <img src="imagenes/hamtaro4.jpg" alt="Hamtaro 4">
+                <img src="imagenes/hamtaro5.jpg" alt="Hamtaro 5">
+                <img src="imagenes/hamtaro.jpg" alt="Hamtaro 6">
+                <img src="imagenes/hamtaro7.jpg" alt="Hamtaro 7">
+                <img src="imagenes/hamtaro8.jpg" alt="Hamtaro 8">
+                <img src="imagenes/hamtaro9.jpg" alt="Hamtaro 9">
+                <img src="imagenes/hamtaro10.jpg" alt="Hamtaro 10">
+                <img src="imagenes/hamtaro11.jpg" alt="Hamtaro 11">
+            </div>
+            <p class="descripcion">
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible, tiene una durabilidad excelente y si la cuidas la tendrás por muchísimos años. Es un hamster lleno de detalles, tiene su boquita abierta para aceptar chupete real, biberón... Se puede bañar. Mide 8 cm aproximadamente. Se entrega con un chupete, patito, "portahamster", hoja de cuidados, certificado de autenticidad y alguna sorpresa.
+                Para más información contacte por Whatsapp.
+            </p>
+        </div>
+                 <div class="producto">
+            <h13 class="titulo-grande">Sully</h13>
+            <div class="galeria">
+                <img src="imagenes/sully1.jpg" alt="Sully 1">
+                <img src="imagenes/sully2.jpg" alt="Sully2">
+                <img src="imagenes/sully3.jpg" alt="Sully 3">
+                <img src="imagenes/sully4.jpg" alt="Sully 4">
+                <img src="imagenes/sully5.jpg" alt="Sully 5">
+                <img src="imagenes/sully6.jpg" alt="Sully 6">
+                <img src="imagenes/sully7.jpg" alt="Sully 7">
+                <img src="imagenes/sully8.jpg" alt="Sully 8">
+                <img src="imagenes/sully9.jpg" alt="Sully 9">
+                <img src="imagenes/sully10.jpg" alt="Sully 10">
+                <img src="imagenes/sully11.jpg" alt="Sully 11">
+            </div>
+            <p class="descripcion">
+                Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real,biberón... las pestañas injertadas, lleva el pelo injertado en forma de cresta y un poco en la cola. Se puede bañar. Mide 15 cm y pesa 0´500kg, se puede hacer en niño o en niña y en rosa o azul. 
+                Se entrega con un chupete, cunita de coco, vestido con su taparrabos, peluche, hoja de cuidados, certificado de autenticidad y alguna sorpresa.
                 Para más información contacte por Whatsapp.
             </p>
         </div>
