--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <img src="imagenes/martina4.jpg" alt="Martina 4">
                 <img src="imagenes/martina5.jpg" alt="Martina 5">
                 <img src="imagenes/martina6.jpg" alt="Martina 6">
-                <img src="imagenes/martina7.jpg" alt="Martina 7">
+                <img src="imagenes/martina7.jpeg" alt="Martina 7">
                 <img src="imagenes/martina8.jpg" alt="Martina 8">
                 <img src="imagenes/martina9.jpg" alt="Martina 9">
                 <img src="imagenes/martina10.jpg" alt="Martina 10">
