--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             <div class="galeria">
                 <img src="imagenes/noemi1.jpg" alt="Noemi 1">
                 <img src="imagenes/noemi2.jpg" alt="Noemi 2">
-                <img src="imagenes/noemi3.jpg" alt="Noemi 3">
-                <img src="imagenes/noemi4.jpg" alt="Noemi 4">
+                <img src="imagenes/noemi3.jpeg" alt="Noemi 3">
+                <img src="imagenes/noemi4.jpeg" alt="Noemi 4">
                 <img src="imagenes/noemi5.jpg" alt="Noemi 5">
             </div>
             <p class="descripcion">
@@ -186,7 +186,7 @@
                 <img src="imagenes/oreo6.jpg" alt="Oreo 6">
                 <img src="imagenes/oreo7.jpg" alt="Oreo 7">
                 <img src="imagenes/oreo8.jpg" alt="Oreo 8">
-                <img src="imagenes/oreo9.jpg" alt="Oreo 9">
+                <img src="imagenes/oreo9.jpeg" alt="Oreo 9">
                 <img src="imagenes/oreo10.jpg" alt="Oreo 10">
             </div>
             <p class="descripcion">
@@ -222,13 +222,14 @@
                 Para más información contacte por Whatsapp.
             </p>
         </div>
-                 <div class="producto">
+          <div class="producto">
             <h13 class="titulo-grande">Sully</h13>
             <div class="galeria">
                 <img src="imagenes/sully1.jpg" alt="Sully 1">
                 <img src="imagenes/sully2.jpg" alt="Sully2">
                 <img src="imagenes/sully3.jpg" alt="Sully 3">
                 <img src="imagenes/sully4.jpg" alt="Sully 4">
+            </div>
             <p class="descripcion">
                 Silicona Malvavisco de la más alta calidad, lo que quiere decir que es extrablanda, flexible y es la única silicona que crea en la bebé arruguitas que la hacen parecer piel real,tiene una durabilidad excelente y si la cuidas tendrás una bebe preciosa por muchísimos años. Es una bebé llena de detalles, tiene su boquita abierta para aceptar chupete real,biberón... las pestañas injertadas, lleva el pelo injertado en forma de cresta y un poco en la cola. Se puede bañar. Mide 15 cm y pesa 0´500kg, se puede hacer en niño o en niña y en rosa o azul. 
                 Se entrega con un chupete, cunita de coco, vestido con su taparrabos, peluche, hoja de cuidados, certificado de autenticidad y alguna sorpresa.
@@ -236,6 +237,70 @@
             </p>
         </div>
     </section>
+
+<section id="vinilo">
+  <div class="producto">
+    <h2 class="titulo-grande">Vinilo con cuerpo de tela</h2>
+
+    <h14>Mayven</h14>
+    <div class="galeria">
+      <img src="imagenes/mayven1.jpg" alt="Mayven 1">
+      <img src="imagenes/mayven2.jpg" alt="Mayven 2">
+      <img src="imagenes/mayven3.jpg" alt="Mayven 3">
+    </div>
+
+    <p class="descripcion">
+      Bebe Reborn vinilo  con cuerpo de tela, hecho a mano a partir del kit original Mayven (Viviane Aleluia). Edición abierta. Kit de 18″. Es una bebé con muchísimos detalles y realizada con los mejores materiales para alcanzar el realismo y la textura de piel real. Su  pelito es injertado y lleva imanes para su chupete y para ponerle cositas en el pelo.Se entrega con mantita peluche, chupete, chupetero, pañal, body, ropita de repuesto, hoja de cuidados, certificado de nacimiento y autenticidad y alguna sorpresa. DISPONIBLE
+      Para más información contacte por WhatsApp.
+    </p>
+   </div>
+   <div class="producto">
+        <h15>Ravy</h15>
+    <div class="galeria">
+      <img src="imagenes/ravy1.jpg" alt="Ravy 1">
+      <img src="imagenes/ravy2.jpg" alt="Ravy 2">
+    </div>
+
+    <p class="descripcion">
+      Bebe Reborn vinilo  con cuerpo de tela, hecho a mano a partir del kit original Ravy (Priscila López). Edición limitada con placa. Kit de 20″. Es un bebé con muchísimos detalles y realizada con los mejores materiales para alcanzar el realismo y la textura de piel real. Su  pelito es injertado y lleva imanes para su chupete y para ponerle cositas en el pelo.Se entrega con mantita peluche, chupete, chupetero, pañal, body, ropita de repuesto, hoja de cuidados, certificado de nacimiento y autenticidad y alguna sorpresa. DISPONIBLE
+      Para más información contacte por WhatsApp.
+    </p>
+  </div>
+  <div class="producto">
+        <h16>Irys</h16>
+    <div class="galeria">
+      <img src="imagenes/irys1.jpg" alt="Irys 1">
+      <img src="imagenes/irys2.jpg" alt="Irys 2">
+    </div>
+
+    <p class="descripcion">
+      Bebe Reborn vinilo  con cuerpo de tela, hecho a mano a partir del kit original Irys (Johanna Kazmiezka). Edición limitada con placa. Kit de 20″. Es un bebé con muchísimos detalles y realizada con los mejores materiales para alcanzar el realismo y la textura de piel real. Su  pelito es injertado y lleva imanes para su chupete y para ponerle cositas en el pelo.Se entrega con mantita peluche, chupete, chupetero, pañal, body, ropita de repuesto, hoja de cuidados, certificado de nacimiento y autenticidad y alguna sorpresa. DISPONIBLE
+      Para más información contacte por WhatsApp.
+    </p>
+  </div>
+
+   <div class="producto">
+        <h17>Trabajos en vinilo vendidos</h17>
+    <div class="galeria">
+      <img src="imagenes/ejemplo1.jpeg" alt="Ejemplo 1">
+      <img src="imagenes/ejemplo2.jpeg" alt="Ejemplo 2">
+      <img src="imagenes/ejemplo3.jpeg" alt="Ejemplo 3">
+      <img src="imagenes/ejemplo4.jpeg" alt="Ejemplo 4">
+      <img src="imagenes/ejemplo5.jpeg" alt="Ejemplo 5">
+      <img src="imagenes/ejemplo6.jpeg" alt="Ejemplo 6">
+      <img src="imagenes/ejemplo7.jpeg" alt="Ejemplo 7">
+      <img src="imagenes/ejemplo8.jpeg" alt="Ejemplo 8">
+      <img src="imagenes/ejemplo9.jpeg" alt="Ejemplo 9">
+      <img src="imagenes/ejemplo10.jpeg" alt="Ejemplo 10">
+    </div>
+
+    <p class="descripcion">
+      Además de los disponibles actualmente también podemos realizar por encargo el kit que tú quieras y se adapte más a tus gustos personales.
+      Os dejo más ejemplos de mi trabajo en otros kits para que podáis guiarme en el proceso de encontrar vuestro bebé ideal.
+      Para más información contacte por WhatsApp.
+    </p>
+  </div>
+</section>
 
     <footer>
         <p>Sigue a Susu's Reborn en:
