--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
                 <li><a href="#silicona">Catálogo</a></li>
+                <li><a href="#vinilo">Vinilo con cuerpo de tela</a></li>
             </ul>
         </nav>
     </header>
@@ -242,7 +243,7 @@
   <div class="producto">
     <h2 class="titulo-grande">Vinilo con cuerpo de tela</h2>
 
-    <h14>Mayven</h14>
+    <h14 class="titulo-grande">Mayven</h14>
     <div class="galeria">
       <img src="imagenes/mayven1.jpg" alt="Mayven 1">
       <img src="imagenes/mayven2.jpg" alt="Mayven 2">
@@ -255,7 +256,7 @@
     </p>
    </div>
    <div class="producto">
-        <h15>Ravy</h15>
+        <h15 class="titulo-grande">Ravy</h15>
     <div class="galeria">
       <img src="imagenes/ravy1.jpg" alt="Ravy 1">
       <img src="imagenes/ravy2.jpg" alt="Ravy 2">
@@ -267,7 +268,7 @@
     </p>
   </div>
   <div class="producto">
-        <h16>Irys</h16>
+        <h16 class="titulo-grande">Irys</h16>
     <div class="galeria">
       <img src="imagenes/irys1.jpg" alt="Irys 1">
       <img src="imagenes/irys2.jpg" alt="Irys 2">
@@ -280,7 +281,7 @@
   </div>
 
    <div class="producto">
-        <h17>Trabajos en vinilo vendidos</h17>
+        <h17 class="titulo-grande">Trabajos en vinilo vendidos</h17>
     <div class="galeria">
       <img src="imagenes/ejemplo1.jpeg" alt="Ejemplo 1">
       <img src="imagenes/ejemplo2.jpeg" alt="Ejemplo 2">
@@ -304,7 +305,7 @@
 
     <footer>
         <p>Sigue a Susu's Reborn en:
-            <a href="https://facebook.com/Susu´s Reborn" target="_blank">Facebook</a> |
+            <a href="https://facebook.com/Susu's Reborn" target="_blank">Facebook</a> |
             <a href="https://instagram.com/susus_reborn" target="_blank">Instagram</a> |
             <a href="https://tiktok.com/@sususreborn" target="_blank">TikTok</a>
         </p>
